@@ -10,11 +10,8 @@ namespace DAnCE
   {
   }
 
-
-
   LM_Launcher::~LM_Launcher (void)
   {
-
   }
 
   /*
